<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationActivity"
    >

    <TextView
        android:id="@+id/text_SignUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/_40ssp"
        android:textStyle="bold"
        android:textColor="@color/textHeading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <EditText
        android:id="@+id/Registration_ed_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="@dimen/_15sdp"
        android:inputType="text"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/_10sdp"
        android:elevation="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_SignUP"/>

    <EditText
        android:id="@+id/Registration_ed_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="@dimen/_15sdp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_account_circle"
        android:drawablePadding="@dimen/_10sdp"
        android:elevation="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Registration_ed_name"/>


    <EditText
        android:id="@+id/Registration_ed_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="@dimen/_15sdp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="@dimen/_10sdp"
        android:elevation="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Registration_ed_email"/>


    <Button
        android:id="@+id/Registration_btn_signUp"
        app:layout_constraintWidth_percent=".4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="@dimen/_16sdp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Registration_ed_password"/>


    <TextView
        android:id="@+id/registration_Have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_anaccount"
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/Registration_ed_password"
        app:layout_constraintStart_toStartOf="@id/Registration_ed_password"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintHorizontal_bias=".4"
        app:layout_constraintTop_toBottomOf="@id/Registration_btn_signUp"/>

    <TextView
        android:id="@+id/Registration_text_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/pink"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/registration_Have"
        app:layout_constraintStart_toEndOf="@id/registration_Have"
        app:layout_constraintTop_toTopOf="@id/registration_Have"/>




</androidx.constraintlayout.widget.ConstraintLayout>